Fixed alignment of images on character sheet

--- a/less/character-sheet.less
+++ b/less/character-sheet.less
@@ -90,6 +90,7 @@
                 margin: 0px;
                 border: 0px solid transparent;
                 object-fit: cover;
+                display: inline-block;
             }
             h1 {
                 position: relative;
