--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -903,6 +903,7 @@
                 min-width: 20px;
                 min-height: 20px;
                 border: 0px solid transparent;
+                display:inline-block;
                 // whitesmoke color
                 filter: invert(100%) sepia(1%) saturate(256%) hue-rotate(64deg) brightness(116%) contrast(92%);
             };
